2003-01-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/transformation.c: Implemented scaling percentages

2003-01-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/draw-context.c (spdc_set_startpoint): Snap startpoint (thanks to Nathan)
	(sp_pen_context_root_handler): Ditto

	* src/dialogs/transformation.c: Implement simple move dialog

2003-01-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/guideline.c (sp_guideline_new): Changed signature, fixes
	granular new guideline placement bug
	(sp_guideline_render): Use normal rounding, so guideline and object are aligned

	* src/sp-item.h: Changed the signature of ::snappoints, this forced me to
	use NRPoints near everywhere else too

2003-01-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/draw-context.c (spdc_endpoint_snap): Make Ctrl to restrict directions
	to multitudes of 15 degrees (thanks to Nathan Hurst)

2003-01-13  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/file.c (sp_file_open_dialog): Rearrange
	(sp_file_save_dialog): Ditto
	(sp_file_save_document): Ditto

2003-01-13  MenTaLguY  <mental@rydia.net>

	* src/toolbox.c (sp_maintoolbox_create): turned off user resizing of toolbox so it autoresizes properly

2003-01-13  MenTaLguY  <mental@rydia.net>

	* src/toolbox.c (sp_maintoolbox_create): turned off user resizing of toolbox so it autoresizes properly


	* src/print.c (sp_print_plain_bind): Move generic PS code here
	(sp_print_plain_release): Ditto
	(sp_print_plain_fill): Ditto
	(sp_print_plain_stroke): Ditto
	(sp_print_plain_image_R8G8B8A8_N): Ditto
	(sp_print_document): Implement very-very simple non-gnome print dialog

2003-01-12  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/main.c: Made --without-popt working

2003-01-11  MenTaLguY  <mental@rydia.net>

	* src/xml/repr-io.c: removed bogus ATTLIST from DOCTYPE
	(sp_repr_read_file): factored out duplicated code into sp_repr_do_read + added parameter for default namespace