@@ -1,5 +1,9 @@
 2003-01-18  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/seltrans.c (sp_sel_trans_grab): Build array of selected item transformations
+	(sp_sel_trans_transform): Use original transforms to avoid rounding errors
+	(sp_sel_trans_ungrab): Release array
+
 	* src/dialogs/transformation.c: Implemented scaling percentages
 
 2003-01-17  Lauris Kaplinski  <lauris@kaplinski.com>
